--- a/style.css
+++ b/style.css
@@ -860,7 +860,7 @@ body.home-page .site-subtitle-header {
         align-items: center !important;
         padding: 0 15px !important;
         margin-top: 15px !important;
-
+    }
     .menu-toggle {
         display: flex !important;
         align-items: center !important;
